# anihilacja

./: CMakeLists.txt  README.md  config.h
src/: main.c
src/config/: config.c  config.h
src/debug/: debug.c  debug.h
src/game/: game.c  game.h  map.c  map.h
src/graphic/: draw.c  draw.h  window.c  window.h
src/input/: input.c  input.h
src/list/: list.c  list.h
